更新了自动收敛和绘图

--- a/src/docker/docker-compose.yml
+++ b/src/docker/docker-compose.yml
@@ -13,6 +13,7 @@ services:
     volumes:
       - ../../certs/server:/app/certs:ro
       - ../../logs:/app/logs
+      - ../../out:/app/out
     networks:
       - federated-network
 
