--- a/src/docker/Dockerfile.server
+++ b/src/docker/Dockerfile.server
@@ -10,7 +10,9 @@ WORKDIR /app
 # 设置环境变量
 ENV PYTHONUNBUFFERED=1 \
     PYTHONDONTWRITEBYTECODE=1 \
-    GRPC_SERVER_PORT=50051
+    GRPC_SERVER_PORT=50051 \
+    LANG=C.UTF-8 \
+    LC_ALL=C.UTF-8
 
 # 更换Debian源为清华镜像源
 # RUN sed -i 's/deb.debian.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apt/sources.list.d/debian.sources
@@ -19,6 +21,10 @@ RUN sed -i 's@deb.debian.org@mirrors.tuna.tsinghua.edu.cn@g' /etc/apt/sources.li
 # 安装系统依赖
 RUN apt-get update && apt-get install -y \
     build-essential \
+    fonts-noto-cjk \
+    fontconfig \
+    locales \
+    && fc-cache -fv \
     && rm -rf /var/lib/apt/lists/*
 
 # 配置pip使用国内镜像源
