更新了MPC模拟模式

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,14 @@
+cryptography
 grpcio
+grpcio-tools
+matplotlib
 numpy
 pandas
-torch
-scikit-learn
-tqdm
-matplotlib
-PyYAML
-grpcio-tools
-protobuf
+Pillow
 phe
-cryptography
+protobuf
+PyYAML
+scikit-learn
 seaborn
+pyseltongue
+tqdm
